# AgX

./: .gitignore  README.md  config.ocio  pyproject.toml
LUTs/: AgX_Default_Contrast.spi1d  AgX_False_Color.cube  AgX_False_Color.spi1d  AgX_False_Color_SDR.cube  AgX_Formation.cube  AgX_ST2084_Contrast.spi1d  Spherical_Compression.cube  guard_rail_bt2020.cube  guard_rail_high_side.cube  guard_rail_p3.cube  guard_rail_srgb.cube  luminance_correction.cube  luminance_correction_bt2020.cube  luminance_correction_p3.cube  luminance_correction_srgb.cube  moment_compression.cube  moment_spherical_compression.cube  post_formation_compression_p3.cube  post_formation_compression_srgb.cube  xyz_D65_to_E.spimtx
dev/images/: test_pattern.exr
dev/images/references/: test_pattern.AgX_log.exr
dev/images/sources/: test_pattern.exr
dev/launchers/: C4d-2023-redshift-windows.sh  Katana-v4.5.1-redshift-windows.sh  Nuke-13.0.9-windows.sh  Nuke-13.2.1-windows.sh  ociocheck-validate_config.sh
dev/obs/obs_codegen/: __init__.py  __main__.py  c.py  entitities.py  generator.py  util.py
dev/ocio/: colorspaces.py
dev/prefs/katana/: Prefs2.ini  (+2 more)
dev/scripts/: generate-sRGB-LUT.py  hlsl-colorspace-generation.py
hlsl/: README.md
hlsl/Shaders/: AgX.hlsl
obs/: AgX.hlsl  AgX.lua  README.md
obs/doc/: DEV.md
obs/obs-script/: AgX.hlsl  AgX.lua  colorspace.hlsl
ocio/: README.md  config.ocio  rs-minimal-2.ocio  rs-minimal.ocio  rs-official-stripped.ocio
ocio/LUTs/: baba.spi1d  dummy.spi1d  sRGB-EOTF-inverse.spi1d  sRGB-EOTF.spi1d
python/: AgX.numpy.py  README.md
reshade/: README.md
(+9 files in other folders)
