[tool.poetry]
name = "AgXc"
version = "0.5.1"
description = "Fork of Troy.S AgX, a display rendering transform available via OCIO and more."
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
colour = { git = "https://github.com/colour-science/colour.git", branch = "develop" }
numpy = "*"
opencolorio = "2.1.*"

[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

